# task_md

./: package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: App.tsx  styles.css
src/entities/CreateFile/: index.ts
src/entities/CreateFile/api/: CreateFile.ts
src/entities/DeleteFile/: index.ts
src/entities/DeleteFile/api/: DeleteFile.ts
src/entities/Markdown/ui/: Markdown.tsx
src/entities/ReadDir/: index.ts
src/entities/ReadDir/api/: ReadDir.ts
src/entities/ReadDir/model/: ReadDir.d.ts
src/entities/ReadFile/: index.ts
src/entities/ReadFile/api/: ReadFile.ts
src/entities/ReadFile/model/: ReadFile.d.ts
src/entities/RenameFile/: index.ts
src/entities/RenameFile/api/: RenameFile.ts
src/entities/WriteFile/: index.ts
src/entities/WriteFile/api/: WriteFile.ts
src/feautures/CreateNote/: index.ts
src/feautures/CreateNote/api/: CreateNote.ts
src/feautures/DeleteNote/: index.ts
src/feautures/DeleteNote/api/: DeleteNote.ts
src/feautures/MarkdownContentRender/: index.ts
src/feautures/MarkdownContentRender/api/: MarkdownContentRender.ts
src/feautures/NoteStore/: index.ts
src/feautures/NoteStore/api/: NoteStore.ts
src/feautures/NotesList/: index.ts
src/feautures/NotesList/api/: NotesList.ts
src/pages/Body/: index.ts
src/pages/Body/ui/: Body.tsx
src/shared/api/: dateFormatter.ts  store.ts
src/shared/model/: models.d.ts
src/shared/ui/Buttons/: index.ts
src/shared/ui/DragRegion/: index.ts
(+30 files in other folders)
